@@ -82,6 +82,7 @@ Bug fixes
  * Explorer menu no longer scrolls with page content (Vincent Audebert)
  * ``decorate_urlpatterns`` now uses ``functools.update_wrapper`` to keep view names and docstrings (Mario César)
  * StreamField block controls are no longer hidden by the StreamField menu when prepending a new block (Vincent Audebert)
+ * Removed invalid use of ``__`` alias that prevented strings getting picked up for translation (Juha Yrjölä)
 
 
 Upgrade considerations
